--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/fuzy-ai/fuzy-js#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "uuid": "^8.3.2"
   }
 }
